added signup form

--- a/OpenBioC/app/templates/app/index.html
+++ b/OpenBioC/app/templates/app/index.html
@@ -15,6 +15,12 @@
 <div class="container py-5" ng-show="show_login">
 {% include "app/login.html" %}
 </div>
+
+<div class="container py-5" ng-show="show_signup">
+{% include "app/signup.html" %}
+</div>
+
+
 </div> <!-- angular controler -->
 <script src="/static/app/OBC_app.js"></script>
 <script src="/static/app/OBC_ctrl.js"></script>
