--- a/OpenBioC/app/templates/app/login.html
+++ b/OpenBioC/app/templates/app/login.html
@@ -1,9 +1,6 @@
 {% comment %}
-Main style is taken from here:
-https://getbootstrap.com/docs/4.0/components/navbar/#supported-content
+Style taken from here: https://www.codeply.com/go/nhbdi2FkJm/bootstrap-4-login-form 
 
-Items to the right how to:
-https://stackoverflow.com/a/20362024/5626738
 {% endcomment %}
 
 <div class="row">
