--- a/OpenBioC/app/templates/app/navbar.html
+++ b/OpenBioC/app/templates/app/navbar.html
@@ -1,6 +1,11 @@
 {% comment %}
-https://www.codeply.com/go/Q1EhpQ73AR/bootstrap-4-form-examples
+Main style is taken from here:
+https://getbootstrap.com/docs/4.0/components/navbar/#supported-content
+
+Items to the right how to:
+https://stackoverflow.com/a/20362024/5626738
 {% endcomment %}
+
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="#">OpenBio</a>
@@ -19,7 +24,7 @@ https://www.codeply.com/go/Q1EhpQ73AR/bootstrap-4-form-examples
   <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <a href class="nav-link" ng-click="navbar_signup_pressed()">Signup</a>
+        <a href class="nav-link" ng-click="navbar_signup_pressed()">Sign-up</a>
       </li>
       <li class="nav-item">
         <a href class="nav-link" ng-click="navbar_login_pressed()">Login</a>
