basic signup functionality

--- a/OpenBioC/app/templates/app/index.html
+++ b/OpenBioC/app/templates/app/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<script type="text/javascript"> window.CSRF_TOKEN = "{{ csrf_token }}"; window.username = "{{ username }}"; </script>
 	<script defer src="/static/app/jquery-3.3.1.min.js"></script>
 	<link rel="stylesheet" href="/static/app/css/bootstrap.min.css" type="text/css"/>
 	<script defer src="/static/app/js/bootstrap.min.js"></script>
