login / logout functions

--- a/OpenBioC/app/templates/app/index.html
+++ b/OpenBioC/app/templates/app/index.html
@@ -9,7 +9,7 @@
 	<script src="/static/app/angular.min.js"></script>
 </head>
 <body>
-<div ng-app="OBC_app" ng-controller="OBC_ctrl">
+<div ng-app="OBC_app" ng-controller="OBC_ctrl" ng-init="init()">
 {% include "app/navbar.html" %}
 {# include "app/navbar_default.html" #}
 
