--- a/OpenBioC/app/templates/app/login.html
+++ b/OpenBioC/app/templates/app/login.html
@@ -33,6 +33,9 @@ Style taken from here: https://www.codeply.com/go/nhbdi2FkJm/bootstrap-4-login-f
 			                <input type="checkbox" class="form-check-input"> <span>Remember me on this computer</span>
 			            </label>
 			        </div>
+			        <div class="form-group small">
+			                <a href ng-click="login_password_reset_pressed()">Click here to reset your password</a>
+			        </div>
 			        <button class="btn btn-success btn-lg float-right" ng-click="login_login_pressed()">Login</button>
 			    </form>
 			</div>
