--- a/OpenBioC/app/templates/app/password_reset.html
+++ b/OpenBioC/app/templates/app/password_reset.html
@@ -3,10 +3,10 @@ Style taken from here: https://www.codeply.com/go/nhbdi2FkJm/bootstrap-4-login-f
 
 {% endcomment %}
 
-<div class="row" ng-show="login_error_message">
+<div class="row" ng-show="password_reset_error_message">
 	<div class="col-md-6 offset-md-3">
 		<div class="alert alert-danger">
-			<span ng-bind="login_error_message"></span>
+			<span ng-bind="password_reset_error_message"></span>
 		</div>
 	</div>
 </div>
@@ -14,29 +14,21 @@ Style taken from here: https://www.codeply.com/go/nhbdi2FkJm/bootstrap-4-login-f
 	<div class="col-md-6 offset-md-3">
 		<div class="card card-outline-secondary">
 			<div class="card-header">
-			    <h3 class="mb-0">Login</h3>
+			    <h3 class="mb-0">Password Reset</h3>
 			</div>
 			<div class="card-body">
-			    <form class="form" role="form" autocomplete="off" id="loginForm" novalidate="">
+			    <form class="form" role="form" autocomplete="off" novalidate="">
 			        <div class="form-group">
-			            <label for="uname1">Username</label>
-			            <input type="text" class="form-control" name="uname1" id="login_username" required="" ng-model="login_username">
-			            <div class="invalid-feedback">Please enter your username or email</div>
-			        </div>
-			        <div class="form-group">
-			            <label>Password</label>
-			            <input type="password" class="form-control" id="login_password" required="" autocomplete="new-password" ng-model="login_password">
+			            <label>New Password</label>
+			            <input type="password" class="form-control" required="" autocomplete="" ng-model="password_reset_password">
 			            <div class="invalid-feedback">Please enter a password</div>
 			        </div>
-			        <div class="form-check small">
-			            <label class="form-check-label">
-			                <input type="checkbox" class="form-check-input"> <span>Remember me on this computer</span>
-			            </label>
+			        <div class="form-group">
+			            <label>Confirm new password</label>
+			            <input type="password" class="form-control" required="" autocomplete="" ng-model="password_reset_confirm_password">
+			            <div class="invalid-feedback">Please enter a password</div>
 			        </div>
-			        <div class="form-group small">
-			                <a href ng-click="login_password_reset_pressed()">Forgot your password? Click here to reset it</a>
-			        </div>
-			        <button class="btn btn-success btn-lg float-right" ng-click="login_login_pressed()">Login</button>
+			        <button class="btn btn-success btn-lg float-right" ng-click="password_reset_change_pressed()">Change</button>
 			    </form>
 			</div>
 			<!--/card-body-->
