user profile first edits

--- a/OpenBioC/app/templates/app/signup.html
+++ b/OpenBioC/app/templates/app/signup.html
@@ -43,7 +43,7 @@ Style taken from here: https://www.codeply.com/go/nhbdi2FkJm/bootstrap-4-login-f
 			            <div class="invalid-feedback">Enter your email</div>
 			        </div>
 
-			        <button class="btn btn-success btn-lg float-right" id="btnLogin" ng-click="signup_signup_pressed()">Sign-up</button>
+			        <button class="btn btn-success btn-lg float-right" ng-click="signup_signup_pressed()">Sign-up</button>
 			    </form>
 			</div>
 			<!--/card-body-->
