--- a/OpenBioC/app/templates/app/index.html
+++ b/OpenBioC/app/templates/app/index.html
@@ -43,6 +43,9 @@
 {% include "app/password_reset.html" %}
 </div>
 
+<div class="container" ng-show="show_user_profile">
+{% include "app/user_profile.html" %}
+</div>
 
 </div> <!-- angular controler -->
 <script src="/static/app/OBC_app.js"></script>
