signup success message

--- a/OpenBioC/app/templates/app/user_profile.html
+++ b/OpenBioC/app/templates/app/user_profile.html
@@ -10,6 +10,15 @@ Main style taken from: https://bootsnipp.com/snippets/bx5Be
   </div>
 </div>
 
+<div class="row" ng-show="user_profile_success_message">
+  <div class="col-md-12">
+    <div class="alert alert-success">
+        <span ng-bind="user_profile_success_message"></span>
+    </div>
+  </div>
+</div>
+
+
 	<div class="row">
 		<div class="col-md-3">
 		     <div class="list-group ">
