--- a/OpenBioC/app/templates/app/navbar.html
+++ b/OpenBioC/app/templates/app/navbar.html
@@ -15,11 +15,9 @@ https://stackoverflow.com/a/20362024/5626738
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      {% comment %}
       <li class="nav-item active">
-        <a class="nav-link" href="#">Tools/Data <span class="sr-only">(current)</span></a>
+        <a href class="nav-link" ng-click="navbar_tools_pressed()">Tools/Data <span class="sr-only">(current)</span></a>
       </li>
-      {% endcomment %}
     </ul>
   </div>
 
