--- a/OpenBioC/app/templates/app/tools.html
+++ b/OpenBioC/app/templates/app/tools.html
@@ -11,14 +11,26 @@ Taken from:  https://bootstrapious.com/p/bootstrap-sidebar
         </div>
         <hr>
         <div class="form-group multiple-form-group input-group">
-        	<input type="text" class="form-control" placeholder="Name" ng-model="tools_search_name"><h2>/</h2>
-        	<input type="text" class="form-control" placeholder="Version" ng-model="tools_search_version"><h2>/</h2>
-        	<input type="text" class="form-control" placeholder="Edit" ng-model="tools_search_edit">
+        	<input type="text" class="form-control" placeholder="Name" ng-model="tools_search_name" ng-change="tools_search_input_changed()"><h2>/</h2>
+        	<input type="text" class="form-control" placeholder="Version" ng-model="tools_search_version" ng-change="tools_search_input_changed()"><h2>/</h2>
+        	<input type="text" class="form-control" placeholder="Edit" ng-model="tools_search_edit" ng-change="tools_search_input_changed()">
         </div>
         <div class="row">
         	<div class="col">
         		<strong>Found: <span ng-bind="tools_search_tools_number"></span> Tools/Data</strong>
         	</div>
+        </div>
+        <div class="row" ng-show="tools_search_tools_number===0 && (!tools_search_warning) && tools_search_name && tools_search_version">
+            <div class="col-md-4 offset-md-4">
+                <button class="btn btn-success" ng-click="toools_search_create_new_pressed()">Create New</button> <!-- btn-lg -->
+            </div>
+        </div>
+        <div class="row" ng-show="tools_search_warning">
+            <div class="col">
+                <div class="alert alert-warning">
+                    <span ng-bind="tools_search_warning"></span>
+                </div>
+            </div>
         </div>
     </nav>
 </div>
